js/src/tests/test262/built-ins/Error/prototype/toString/not-a-constructor.js
assert
.
sameValue
(
isConstructor
(
Error
.
prototype
.
toString
)
false
'
isConstructor
(
Error
.
prototype
.
toString
)
must
return
false
'
)
;
assert
.
throws
(
TypeError
(
)
=
>
{
new
Error
.
prototype
.
toString
(
)
;
}
'
new
Error
.
prototype
.
toString
(
)
throws
TypeError
'
)
;
reportCompare
(
0
0
)
;
